Upgrade to Spring Boot 3.3 (#11)
* add notes to README for maintaining backward compatibility
* Adjust compatible Java versions in Github Action workflows